--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
-<html>
-<head>>
+<!DOCTYPE html>
+<head>
+ <meta charset="utf-8" />
+ <title>Botchen Home</title>
 </head>
 <body>
+<h2>Welcome to Botchen API</h2>
 
 
 	
